[tool.poetry]
name = "yourtube"
version = "0.1.0"
description = ""
authors = ["Merle Hoffmann <hoffmannmerle@web.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.19"
SQLAlchemy-utils = "^0.36.8"

[tool.poetry.dev-dependencies]
pylint = "^2.6"
black = "^20.8b1"
isort = "^5.5"
typer = "^0.3"
python-youtube = "^0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
